Added: Scoring, answer validation, grade messages

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
             </div>
             <div class="quiz-choices">
-                <form>
-                    <input id="choice1" type="radio" name="question" value="0" checked="checked">
+                <form id="quiz-form">
+                    <input id="choice1" type="radio" name="question" value="0">
                     <label for="choice1"></label><br>
                     <input id="choice2" type="radio" name="question" value="1">
                     <label for="choice2"></label><br>
@@ -40,6 +40,25 @@
                     <input id="choice4" type="radio" name="question" value="3">
                     <label for="choice4"></label><br>
                 </form>
+            </div>
+            <div id="finish">
+                <h2>Congratulations! You finished the quiz.</h2>
+                <h3>Get your grade below.</h3>
+            </div>
+            <div id="grade">
+                <h1 id="your-grade">Your Grade: </h1>
+                <h1 id="grade-percent"></h1>
+                <h2 id="zero">I never knew you.</h2>
+                <h2 id="one">Well, you got one. Not one more friend. Just one.</h2>
+                <h2 id="two">You got lucky, stranger.</h2>
+                <h2 id="three">You don't love me.</h2>
+                <h2 id="four">Don't feel bad. I probably don't know a lot about you either.</h2>
+                <h2 id="five">We were friends in a past life. Or maybe years ago.</h2>
+                <h2 id="six">We're just Facebook friends.</h2>
+                <h2 id="seven">You're a pretty good friend. Let's keep this up.</h2>
+                <h2 id="eight">You're a good friend. I'm glad to know you.</h2>
+                <h2 id="nine">You're a great friend. Let's hug hard.</h2>
+                <h2 id="ten">You are a true friend. We're probably hanging out right now.</h2>
             </div>
         </div>
         <div id="btn-next">
