--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <h1>Lyle's True Friend Quiz</h1>
         </div>
         <div id="quiz">
+
+            <!--@lob Add username entry and database capability (?) -->
+
             <div class="quiz-question">
 
             </div>
