Add button div/styling;

--- a/index.html
+++ b/index.html
@@ -64,15 +64,19 @@
                 <h2 id="ten">You are a true friend. We're probably hanging out right now.</h2>
             </div>
         </div>
-        <div id="btn-next">
-            <button>Next</button>
+        <div id="buttons">
+            <div id="btn-next">
+                <button class="btn">Next</button>
+            </div>
+            <div id="btn-prev">
+                <button class="btn">Prev</button>
+            </div>
+            <div id="btn-submit">
+                <input type="submit" value="Get Your Grade">
+            </div>
         </div>
-        <div id="btn-prev">
-            <button>Prev</button>
-        </div>
-        <div id="btn-submit">
-            <input type="submit" value="Get Your Grade">
-        </div>
+
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="jquery/jquery-1.11.2.min.js"></script>
