Added radio selection on previous (btn-prev)

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <div class="quiz-question">
 
             </div>
-            <div class="quiz-choices">
+            <div class="quiz-choices noselect">
                 <form id="quiz-form">
-                    <input id="choice1" type="radio" name="question" value="0">
+                    <input id="choice0" type="radio" name="question" value="0">
+                    <label for="choice0"></label><br>
+                    <input id="choice1" type="radio" name="question" value="1">
                     <label for="choice1"></label><br>
-                    <input id="choice2" type="radio" name="question" value="1">
+                    <input id="choice2" type="radio" name="question" value="2">
                     <label for="choice2"></label><br>
-                    <input id="choice3" type="radio" name="question" value="2">
+                    <input id="choice3" type="radio" name="question" value="3">
                     <label for="choice3"></label><br>
-                    <input id="choice4" type="radio" name="question" value="3">
-                    <label for="choice4"></label><br>
                 </form>
             </div>
             <div id="finish">
