Add styling to submit button

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <div id="btn-prev">
                 <button class="btn">Prev</button>
             </div>
+            <div id="btn-finish">
+                <button class="btn">Finish!</button>
+            </div>
             <div id="btn-submit">
                 <input type="submit" value="Get Your Grade">
             </div>
