Changed #btn-submit type to button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <button class="btn">Finish!</button>
             </div>
             <div id="btn-submit">
-                <input type="submit" value="Get Your Grade">
+                <button class="btn">Get your grade</button>
             </div>
         </div>
 
